Add first description of Neuroevolution

--- a/neuroevolution_of_augmenting_topologies_paper_2.tex
+++ b/neuroevolution_of_augmenting_topologies_paper_2.tex
@@ -76,6 +76,13 @@
 
 \section{Neuroevolution and Evolutionary Algorithms}
 % Check out the research done by Uber-Research
+% Comparison with other Reinforcement Learning Techniques (Deep Q-Learning, etc)
+Neuroevolution  is  a  machine  learning  technique  that  applies  evolutionary   algorithms   to  construct artificial  neural networks,  taking  inspiration  from  the  evolution  of  biological nervous systems in nature. \cite{cite02}
+
+An evolutionary algorithm, used in the construction of those artificial neural networks, is a generic population-based optimization algorithms. This population consists of single members which are often algorithms - or neural networks in the case of Neuroevolution - that are trying to solve the problem upon which the evolutionary algorithm is applied to. The evolutionary algorithm then aims to optimize the members of its population by maximizing their result on the \textit{fitness function} upon which all members of the population are judged and usually does so by the means of reproduction, mutation, recombination and selection - mirroring biological evolution.
+
+This algorithmic form of \textit{natural selection} by only letting the most fit algorithms (members) sustain in the population and eradicating the less performant algorithms is a form of maximizing the cumulative reward of the whole population and does therefore classify as the machine learning paradigm of \textit{Reinforcement Learning}.
+
 
 
 
@@ -121,6 +128,8 @@
   \bibitem{cite01}
     Example Cite, {\em Source}, Apr. 2019.
     \url{www.example.com}
+  \bibitem{cite02}
+    \url{http://www.scholarpedia.org/article/Neuroevolution}
 
 \end{thebibliography}
 
