--- a/neuroevolution_of_augmenting_topologies_paper_2.tex
+++ b/neuroevolution_of_augmenting_topologies_paper_2.tex
@@ -81,12 +81,46 @@
 
 \section{Neuroevolution and Evolutionary Algorithms}
 % Check out the research done by Uber-Research
-% Comparison with other Reinforcement Learning Techniques (Deep Q-Learning, etc)
 Neuroevolution  is  a  machine  learning  technique  that  applies  evolutionary   algorithms   to  construct artificial  neural networks,  taking  inspiration  from  the  evolution  of  biological nervous systems in nature. \cite{cite02}
 
-An evolutionary algorithm, used in the construction of those artificial neural networks, is a generic population-based optimization algorithms. This population consists of single members which are often algorithms - or neural networks in the case of Neuroevolution - that are trying to solve the problem upon which the evolutionary algorithm is applied to. The evolutionary algorithm then aims to optimize the members of its population by maximizing their result on the \textit{fitness function} upon which all members of the population are judged and usually does so by the means of reproduction, mutation, recombination and selection - mirroring biological evolution.
+A evolutionary algorithm is a generic population-based and meta-heuristically optimized algorithmic solution to an applied problem. When breaking this down to simpler terms, does this mean first of all that an evolutionary algorithm (short form: \textbf{EA}) is solution to an applied problem. This solution can take the form of a classical calculation algorithm or more complex forms like the aforementioned artificial neural network. As generic as its method of solving the problem it is applied to is its application domain. Evolutionary Algorithms - as well as Neuroevolution by which they are employed - are highly general and allow for learning without explicit targets even if provided with only minimal feedback. \cite{cite02}
+
+Evolutionary Algorithms are population-based, meaning they not only handle a single solution to the problem they are applied to, but they have a multitude of solutions to this problem. Each of the solutions is called a \textit{member} of its arbitrarily large population and each solution is arbitrarily similar to one another. Each member of the population is judged by a common \textit{fitness function}, which numerically expresses the members quality of its solution to the applied problem. The higher the corresponding \textit{fitness function} score of a member, the better is the solution to the applied problem. All members are judged by the same fitness function, which is the key hyperparameter that determines how well a problem has been solved.
+
+The key aspect of evolutionary algorithms however lies in its meta-heuristic optimization method. This optimization method improves the members of the population in the sense that along the evolutionary process almost all members of the population score an increasingly higher fitness function evaluation score - meaning they get increasingly better at solving the problem they are applied to.
+This optimization method is employed after each \textit{generation} of a population. A generation in the evolutionary process is completed once every member of the population has been applied to the problem and has been assigned a fitness score by the common fitness function. The population is then mixed up through \textit{reproduction}, \textit{mutation}, \textit{recombination} and \textit{selection}. These processes spread traits of high-performing members to low-performing members, preserve high-performing members while extinguishing low-performing members and introduce novel traits to already high-performing members to further explore the solution-space.
+
+Applying the attributes of Evolutionary Algorithms to artificial Neural Networks does result in the machine learning technique Neuroevolution.
+% Describe EAs specific to neural networks
+% Describe the 'and with arbitrary neural models and network structures.'
+% Describe how it can then be classified as the ml paradigm of RL
+
+
+
+
+
+
+
+
+
+
+
+, that . This population consists of single members which are often algorithms - or neural networks in the case of Neuroevolution - that are trying to solve the problem upon which the evolutionary algorithm is applied to. The evolutionary algorithm then aims to optimize the members of its population by maximizing their result on the \textit{fitness function} upon which all members of the population are judged and usually does so by the means of reproduction, mutation, recombination and selection - mirroring biological evolution.
 
 This algorithmic form of \textit{natural selection} by only letting the most fit algorithms (members) sustain in the population and eradicating the less performant algorithms is a form of maximizing the cumulative reward of the whole population and does therefore classify as the machine learning paradigm of \textit{Reinforcement Learning}.
+
+Compared to other neural network learning methods, neuroevolution is highly general; it allows learning without explicit targets, with only sparse feedback, \textbf{and with arbitrary neural models and network structures.}
+
+
+% Current Research in Neuroevolution
+
+
+
+% Explicit Neuroevolution algorithms (NEAT, etc)
+
+
+
+% Comparison with other Reinforcement Learning Techniques (Deep Q-Learning, etc)
 
 
 
