--- a/neuroevolution_of_augmenting_topologies_paper_2.tex
+++ b/neuroevolution_of_augmenting_topologies_paper_2.tex
@@ -90,18 +90,31 @@ Evolutionary Algorithms are population-based, meaning they not only handle a sin
 The key aspect of evolutionary algorithms however lies in its meta-heuristic optimization method. This optimization method improves the members of the population in the sense that along the evolutionary process almost all members of the population score an increasingly higher fitness function evaluation score - meaning they get increasingly better at solving the problem they are applied to.
 This optimization method is employed after each \textit{generation} of a population. A generation in the evolutionary process is completed once every member of the population has been applied to the problem and has been assigned a fitness score by the common fitness function. The population is then mixed up through \textit{reproduction}, \textit{mutation}, \textit{recombination} and \textit{selection}. These processes spread traits of high-performing members to low-performing members, preserve high-performing members while extinguishing low-performing members and introduce novel traits to already high-performing members to further explore the solution-space.
 
-Applying the attributes of Evolutionary Algorithms to artificial Neural Networks does result in the machine learning technique Neuroevolution. Neuroevolution algorithms start out with an initial population of neural networks of varying complexity - meaning topology and weights. The exact nature of this initial population is not stipulated by the Neuroevolution technique and depends on the specific Neuroevolution algorithm. In each generation does each neural network member perform input inference and is subsequently judged by the fitness function. The best scoring neural networks spread their traits to lower scoring neural network. Conventional Neuroevolution algorithms solely adjust the weights of the lower scoring neural networks towards the higher scoring networks while Topology and Weight Evolving Artificial Neural Network algorithms (short form: \textbf{TWEANNs}) additionally also adjust the topology. They introduce new nodes and connections or delete nodes and connections in the low scoring neural networks depending on if they are present in the better scoring neural networks or introduce completely novel nodes and connections in order to explore new, possibly even better performing, solutions.
+Applying the attributes of Evolutionary Algorithms to artificial Neural Networks does result in the machine learning technique Neuroevolution. Neuroevolution algorithms start out with an initial population of neural networks of varying complexity - meaning topology and weights. The exact nature of this initial population is not stipulated by the Neuroevolution technique and depends on the specific Neuroevolution algorithm. In each generation does each neural network member perform input inference and is subsequently judged by the fitness function. The best scoring neural networks spread their traits to lower scoring neural network. Fixed-Topology Neuroevolution algorithms solely adjust the weights of the lower scoring neural networks towards the higher scoring networks while Topology and Weight Evolving Artificial Neural Network algorithms (short form: \textbf{TWEANNs}) additionally also adjust the topology. They introduce new nodes and connections or delete nodes and connections in the low scoring neural networks depending on if they are present in the better scoring neural networks or introduce completely novel nodes and connections in order to explore new, possibly even better performing, solutions.
 Through this do neural networks developed through Neuroevolution algorithms often have arbitrary neural models and network structures and are able to progress in learning even without explicit targets and only sparse feedback.
 
 While concluding this introduction to Neuroevolution can be said that Neuroevolution can be classified as part of the machine learning paradigm of \textit{Reinforcement Learning}. Neuroevolution algorithms learn through ever-changing interaction with the environment instead of a predetermined set of input-output mapping or creative self-organization of input through probabilistic models. Neuroevolution algorithms learn from the consequence of their actions on the basis of their past experiences and also by new choices - quite accurately conforming with the definition of Reinforcement learning.
 
 
-
+\subsection{Research in Neuroevolution}
+% https://www.oreilly.com/ideas/neuroevolution-a-different-kind-of-deep-learning
 % Past and Current Research in Neuroevolution (Also specify the explicit Neuroevolution algorithms when getting to the specific research (NEAT, HyperNEAT, DeepNeurevolution, etc))
 
 
 
+
+% - NEAT (2002): https://www.mitpressjournals.org/doi/abs/10.1162/106365602320169811
+% - HyperNEAT (2009): https://eplex.cs.ucf.edu/hyperNEATpage/
+% - Novelty Search (2011): https://eplex.cs.ucf.edu/noveltysearch/userspage/
+
+
+
+
+
+
+
 % Comparison with other Reinforcement Learning Techniques (Deep Q-Learning, etc)
+% \subsection{Comparison with other Reinforcement Learning Techniques}
 
 
 
@@ -150,6 +163,24 @@ While concluding this introduction to Neuroevolution can be said that Neuroevolu
     \url{www.example.com}
   \bibitem{cite02}
     \url{http://www.scholarpedia.org/article/Neuroevolution}
+  \bibitem{cite03}
+    \url{https://www.oreilly.com/ideas/neuroevolution-a-different-kind-of-deep-learning}
+  \bibitem{cite04}
+    \url{https://eng.uber.com/deep-neuroevolution/}
+  \bibitem{cite05}
+    \url{https://en.wikipedia.org/wiki/Evolutionary_algorithm}
+  \bibitem{cite06}
+    \url{https://en.wikipedia.org/wiki/Genetic_algorithm}
+  \bibitem{cite07}
+    \url{https://en.wikipedia.org/wiki/Neuroevolution}
+  \bibitem{cite08}
+    \url{https://en.wikipedia.org/wiki/Neuroevolution_of_augmenting_topologies}
+  \bibitem{cite09}
+    \url{https://en.wikipedia.org/wiki/Reinforcement_learning}
+  \bibitem{cite10}
+    \url{http://www.scholarpedia.org/article/Neuroevolution}
+  \bibitem{cite11}
+    \url{http://www.scholarpedia.org/article/Reinforcement_learning}
 
 \end{thebibliography}
 
