Adjust Comments to better suit my intentions

--- a/neuroevolution_of_augmenting_topologies_paper_2.tex
+++ b/neuroevolution_of_augmenting_topologies_paper_2.tex
@@ -96,9 +96,14 @@ Through this do neural networks developed through Neuroevolution algorithms ofte
 While concluding this introduction to Neuroevolution can be said that Neuroevolution can be classified as part of the machine learning paradigm of \textit{Reinforcement Learning}. Neuroevolution algorithms learn through ever-changing interaction with the environment instead of a predetermined set of input-output mapping or creative self-organization of input through probabilistic models. Neuroevolution algorithms learn from the consequence of their actions on the basis of their past experiences and also by new choices - quite accurately conforming with the definition of Reinforcement learning.
 
 
-\subsection{Research in Neuroevolution}
+\subsection{Landmark Research in Neuroevolution}
 % https://www.oreilly.com/ideas/neuroevolution-a-different-kind-of-deep-learning
 % Past and Current Research in Neuroevolution (Also specify the explicit Neuroevolution algorithms when getting to the specific research (NEAT, HyperNEAT, DeepNeurevolution, etc))
+% Include comparison with other Reinforcement Learning Techniques (Deep Q-Learning, etc)
+
+
+
+
 
 
 
@@ -109,12 +114,6 @@ While concluding this introduction to Neuroevolution can be said that Neuroevolu
 
 
 
-
-
-
-
-% Comparison with other Reinforcement Learning Techniques (Deep Q-Learning, etc)
-% \subsection{Comparison with other Reinforcement Learning Techniques}
 
 
 
