--- a/neuroevolution_of_augmenting_topologies_paper_3.tex
+++ b/neuroevolution_of_augmenting_topologies_paper_3.tex
@@ -157,55 +157,157 @@ While concluding this introduction to Neuroevolution can be said that Neuroevolu
 
 \begin{thebibliography}{5}
 
-  \bibitem{cite01}
-    Example Cite, {\em Source}, Apr. 2019.
-    \url{www.example.com}
+  \bibitem{cite}
+    Yao - Evolving Artificial Neural Networks; 1999;
+    \url{http://avellano.fis.usal.es/~lalonso/compt_soft/articulos/yao99evolving.pdf}
 
+  \bibitem{cite}
+    Stanley, Miikkulainen - Efficient Evolution of Neural Network Topologies; 2002;
+    \url{http://nn.cs.utexas.edu/downloads/papers/stanley.cec02.pdf}
 
+  \bibitem{cite}
+    Stanley, Miikkulainen - Evolving Neural Networks through Augmented Topologies; 2002;
+    \url{http://nn.cs.utexas.edu/downloads/papers/stanley.ec02.pdf}
 
-Yao - Evolving Artificial Neural Networks
-Stanley, Miikkulainen - Efficient Evolution of Neural Network Topologies
-Stanley, Miikkulainen - Evolving Neural Networks through Augmented Topologies
-Geard, Wiles - Structure and Dynamics of a Gene Network Model Incorporating Small RNAs
-Stanley - Efficient Evolution of Neural Networks through Complexification
-Reisinger, Miikkulainen - Acquiring Evolvability through Adaptive Representations
-Mattiussi, Duerr, et al - Center of Mass Encoding
-Floreano, Duerr, et al - Neuroevolution: From Architectures to Learning
-Stanley, D’Ambrosio, et al - A Hypercube-Based Indirect Encoding for Evolving Large-Scale Neural Networks
-Risi, Stanley - Enhancing ES-HyperNEAT to Evolve More Complex Regular Neural Networks
-Lehman, Stanley - Novelty Search and the Problem with Objectives
-Pascanu, Ganguli, et al - On the Saddle Point for Non-Convex Optimization
-Kim, Minyoung, et al - Deep Clustered Convolutional Kernels
-Fernando, Banarse, et al - Convolution by Evolution
-Jaderberg, Dalibard, et al - Population Based Training of Neural Networks
-Salimans, Ho - Evolution Strategies as a Scalable Alternative to Reinforcement Learning
-Liu, Simonyan, et al - Hierarchical Representation for Efficient Architecture Search
-Real, Moore, et al - Large-scale Evolution of Image Classifiers
-Miikkulainen, Liang, et al -  Evolving Deep Neural networks
-Xie, Yuille - Genetic CNN
-Brock, Lim, et al - One-shot Model Architecture Search through Hypernetworks
-Negrinho, Gordon - Deeparchitect: Automatically Designing and Training Deep Architectures
-Zoph, Vasudevan, et al - Learning Transferable Architectures or Scalable Image Recognition
-Zhong, Yan, et al - Practical Network Blocks Design with Q-Learning
-Zhang, Clune, et al - On the Relationship Between the OpenAI Evolution Strategy and Stochastic Gradient Descent
-Real, Aggarwal, et al - Regularized Evolution for Image Classifier Architecture Search
-Conti, Madhavan, et al - Improving Exploration in Evolution Strategies for Deep Reinforcement Learning via a Population of Novelty Seeking Agents
-Lehman, Chen, et al - ES is More than Just a Traditional Finite-Difference Approximator
-Miikkulainen, Liang, et al - Evolving Deep Neural Networks
-Rawal, Miikkulainen - From Nodes to Networks
-Such, Madhavan, et al - Deep Neuroevolution
-Zhong, Yan, et al - Practical Block-Wise Neural Network Architecture Generation
-Sun, Xue, et al - Evolving Deep Convolutional Neural Networks for Image Classification
-https://en.wikipedia.org/wiki/Neuroevolution_of_augmenting_topologies
-http://www.scholarpedia.org/article/Reinforcement_learning
-http://www.scholarpedia.org/article/Neuroevolution
-http://www.scholarpedia.org/article/Evolutionary_programming
-http://www.scholarpedia.org/article/Genetic_algorithms
-https://www.oreilly.com/ideas/neuroevolution-a-different-kind-of-deep-learning
-https://openai.com/blog/evolution-strategies/
-https://eng.uber.com/deep-neuroevolution/
-https://eng.uber.com/accelerated-neuroevolution/
+  \bibitem{cite}
+    Geard, Wiles - Structure and Dynamics of a Gene Network Model Incorporating Small RNAs; Dec 2003;
+    \url{https://ieeexplore.ieee.org/document/1299575}
 
+  \bibitem{cite}
+    Stanley - Efficient Evolution of Neural Networks through Complexification; Aug 2004;
+    \url{http://nn.cs.utexas.edu/downloads/papers/stanley.phd04.pdf}
+
+  \bibitem{cite}
+    Reisinger, Miikkulainen - Acquiring Evolvability through Adaptive Representations; Jul 2007;
+    \url{http://nn.cs.utexas.edu/downloads/papers/reisinger.gecco07.pdf}
+
+  \bibitem{cite}
+    Mattiussi, Duerr, et al - Center of Mass Encoding: A self-adaptive representation with adjustable redundancy for real-valued parameters; Jul 2007;
+    \url{https://infoscience.epfl.ch/record/101405}
+
+  \bibitem{cite}
+    Floreano, Duerr, et al - Neuroevolution: From Architectures to Learning; Jan 2008;
+    \url{http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.182.1567}
+
+  \bibitem{cite}
+    Stanley, D’Ambrosio, et al - A Hypercube-Based Indirect Encoding for Evolving Large-Scale Neural Networks; 2009;
+    \url{http://axon.cs.byu.edu/~dan/778/papers/NeuroEvolution/stanley3**.pdf}
+
+  \bibitem{cite}
+    Risi, Stanley - Enhancing ES-HyperNEAT to Evolve More Complex Regular Neural Networks; Jul 2011;
+    \url{http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.365.4332}
+
+  \bibitem{cite}
+    Lehman, Stanley - Novelty Search and the Problem with Objectives; Oct 2011;
+    \url{https://www.cs.ucf.edu/eplex/papers/lehman_gptp11.pdf}
+
+  \bibitem{cite}
+    Woergoetter, Porr - Scholarpedia Article on 'Reinforcement Learning'; Sep 2012;
+    \url{http://www.scholarpedia.org/article/Reinforcement_learning}
+
+  \bibitem{cite}
+    Holland - Scholarpedia Article on 'Genetic Algorithms'; Oct 2012;
+    \url{http://www.scholarpedia.org/article/Genetic_algorithms}
+
+  \bibitem{cite}
+    Fogel, Fogel, et al - Scholarpedia Article on 'Evolutionary Programming'; Oct 2013;
+    \url{http://www.scholarpedia.org/article/Evolutionary_programming}
+
+  \bibitem{cite}
+    Lehman, Miikkulainen - Scholarpedia Article on 'Neuroevolution'; Oct 2013;
+    \url{http://www.scholarpedia.org/article/Neuroevolution}
+
+  \bibitem{cite}
+    Pascanu, Ganguli, et al - On the Saddle Point for Non-Convex Optimization; May 2014;
+    \url{https://www.researchgate.net/publication/262452520}
+
+  \bibitem{cite}
+    Kim, Minyoung, et al - Deep Clustered Convolutional Kernels; Mar 2015;
+    \url{https://arxiv.org/abs/1503.01824}
+
+  \bibitem{cite}
+    Fernando, Banarse, et al - Convolution by Evolution; Jun 2016;
+    \url{https://arxiv.org/abs/1606.02580}
+
+  \bibitem{cite}
+    Miikkulainen, Liang, et al - Evolving Deep Neural Networks; Mar 2017;
+    \url{https://arxiv.org/abs/1703.00548}
+
+  \bibitem{cite}
+    Xie, Yuille - Genetic CNN; Mar 2017;
+    \url{https://arxiv.org/abs/1703.01513}
+
+  \bibitem{cite}
+    Negrinho, Gordon - DeepArchitect: Automatically Designing and Training Deep Architectures; Apr 2017;
+    \url{https://arxiv.org/abs/1704.08792}
+
+  \bibitem{cite}
+    Real, Moore, et al - Large-scale Evolution of Image Classifiers; Jun 2017;
+    \url{https://arxiv.org/abs/1703.01041}
+
+  \bibitem{cite}
+    Stanley - Neuroevolution: A Different Kind of Deep Learning; Jul 2017;
+    \url{https://www.oreilly.com/ideas/neuroevolution-a-different-kind-of-deep-learning}
+
+  \bibitem{cite}
+    Brock, Lim, et al - SMASH: One-Shot Model Architecture Search through HyperNetworks; Aug 2017;
+    \url{https://arxiv.org/abs/1708.05344}
+
+  \bibitem{cite}
+    Salimans, Ho - Evolution Strategies as a Scalable Alternative to Reinforcement Learning; Sep 2017;
+    \url{https://arxiv.org/abs/1703.03864}
+
+  \bibitem{cite}
+    Jaderberg, Dalibard, et al - Population Based Training of Neural Networks; Nov 2017;
+    \url{https://arxiv.org/abs/1711.09846}
+
+  \bibitem{cite}
+    Zhang, Clune, et al - On the Relationship Between the OpenAI Evolution Strategy and Stochastic Gradient Descent; Dec 2017;
+    \url{https://arxiv.org/abs/1712.06564}
+
+  \bibitem{cite}
+    Stanley, Clune - Welcoming the Era of Deep Neuroevolution; Dec 2017;
+    \url{https://eng.uber.com/deep-neuroevolution/}
+
+  \bibitem{cite}
+    Liu, Simonyan, et al - Hierarchical Representation for Efficient Architecture Search; Feb 2018;
+    \url{https://arxiv.org/abs/1711.00436}
+
+  \bibitem{cite}
+    Such, Stanley, et al - Accelerating Deep Neuroevolution: Train Atari in Hours on a Single Personal Computer; Apr 2018;
+    \url{https://eng.uber.com/accelerated-neuroevolution/}
+
+  \bibitem{cite}
+    Such, Madhavan, et al - Deep Neuroevolution: Genetic Algorithms Are a Competitive Alternative for Training Deep Neural Networks for Reinforcement Learning; Apr 2018;
+    \url{https://arxiv.org/abs/1712.06567}
+
+  \bibitem{cite}
+    Zoph, Vasudevan, et al - Learning Transferable Architectures or Scalable Image Recognition; Apr 2018;
+    \url{https://arxiv.org/abs/1707.07012}
+
+  \bibitem{cite}
+    Lehman, Chen, et al - ES Is More Than Just a Traditional Finite-Difference Approximator; May 2018;
+    \url{https://arxiv.org/abs/1712.06568}
+
+  \bibitem{cite}
+    Zhong, Yan, et al - Practical Block-Wise Neural Network Architecture Generation; May 2018;
+    \url{https://arxiv.org/abs/1708.05552}
+
+  \bibitem{cite}
+    Rawal, Miikkulainen - From Nodes to Networks: Evolving Recurrent Neural Networks; Jun 2018;
+    \url{https://arxiv.org/abs/1803.04439}
+
+  \bibitem{cite}
+    Conti, Madhavan, et al - Improving Exploration in Evolution Strategies for Deep Reinforcement Learning via a Population of Novelty Seeking Agents; Oct 2018;
+    \url{https://arxiv.org/abs/1712.06560}
+
+  \bibitem{cite}
+    Real, Aggarwal, et al - Regularized Evolution for Image Classifier Architecture Search; Feb 2019;
+    \url{https://arxiv.org/abs/1802.01548}
+
+  \bibitem{cite}
+    Sun, Xue, et al - Evolving Deep Convolutional Neural Networks for Image Classification; Mar 2019;
+    \url{https://arxiv.org/abs/1710.10741}
 
 
 
