Add 2 left out resources and edit existing

--- a/neuroevolution_of_augmenting_topologies_paper_3.tex
+++ b/neuroevolution_of_augmenting_topologies_paper_3.tex
@@ -190,6 +190,10 @@ While concluding this introduction to Neuroevolution can be said that Neuroevolu
     \url{http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.182.1567}
 
   \bibitem{cite}
+    Mattiussi, Marbach, et al - The Age of Analog Networks; Sep 2008;
+    \url{https://www.aaai.org/ojs/index.php/aimagazine/article/view/2156}
+
+  \bibitem{cite}
     Stanley, D’Ambrosio, et al - A Hypercube-Based Indirect Encoding for Evolving Large-Scale Neural Networks; 2009;
     \url{http://axon.cs.byu.edu/~dan/778/papers/NeuroEvolution/stanley3**.pdf}
 
@@ -222,7 +226,7 @@ While concluding this introduction to Neuroevolution can be said that Neuroevolu
     \url{https://www.researchgate.net/publication/262452520}
 
   \bibitem{cite}
-    Kim, Minyoung, et al - Deep Clustered Convolutional Kernels; Mar 2015;
+    Kim, Rigazio - Deep Clustered Convolutional Kernels; Mar 2015;
     \url{https://arxiv.org/abs/1503.01824}
 
   \bibitem{cite}
@@ -288,6 +292,10 @@ While concluding this introduction to Neuroevolution can be said that Neuroevolu
   \bibitem{cite}
     Lehman, Chen, et al - ES Is More Than Just a Traditional Finite-Difference Approximator; May 2018;
     \url{https://arxiv.org/abs/1712.06568}
+
+  \bibitem{cite}
+    Lehman, Chen, et al - Safe Mutations for Deep and Recurrent Neural Networks through Output Gradients; May 2018;
+    \url{https://arxiv.org/abs/1712.06563}
 
   \bibitem{cite}
     Zhong, Yan, et al - Practical Block-Wise Neural Network Architecture Generation; May 2018;
