edit graphics command to user proper illustrations folder

--- a/neuroevolution_of_augmenting_topologies_paper_3.tex
+++ b/neuroevolution_of_augmenting_topologies_paper_3.tex
@@ -10,7 +10,7 @@
 \usepackage{color}          % For color
 \usepackage{draftwatermark} % For watermark
 
-\graphicspath{{./images/}}
+\graphicspath{{./illustrations/}}
 
 \definecolor{green}{rgb}{0, 0.66, 0}
 \definecolor{red}{rgb}{1, 0, 0}
